# OpenHackAlpha

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
agents/experts/: authentication-failures.md  broken-access-control.md  cryptographic-failures.md  injection.md  insecure-design.md  memory-buffer-boundary-errors.md  path-traversal-unrestricted-upload.md  security-misconfiguration.md  sensitive-information-exposure.md  software-data-integrity-failures.md  software-supply-chain-failures.md  unrestricted-resource-consumption.md
agents/orchestration/: finding-triage.md  orchestrator.md  scenario-router.md
agents/reconnaissance/: source-recon.md
agents/shared/: protocol.md
config/: finding-candidate-schema.json  finding-schema.json  finding-triage-schema.json  scenario-result-schema.json  scenario-schema.json
config/semgrep/: openhack-recon.yml
docs/: OPERATING_MODEL.md  QUICKSTART.md
scripts/commands/: create-scenarios.py  init-run.py  log-event.py  next-expert-queue.py  record-finding-triage.py  record-scenario-backlog.py  record-scenario-result.py  render-finding-triage-prompt.py  render-scenario-prompt.py  run-recon.py  summarize-run.py  validate-run.py
src/openhack/: backlog.py  cli.py  coverage.py  expert_scope.py  inventory.py  inventory_patterns.py  log.py  models.py  paths.py  queue.py  recon.py  registry.py  results.py  run.py  (+9 more)
templates/: finding-triage-prompt.md  finding-triage-result.json  finding.md  scenario-prompt.md  scenario-result.json  scenario-router-prompt.md
